ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab
spec:
  ingressClassName: nginx
  rules:
  - host: kube-gitlab.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gitlab-web-service
              port:
                number: 80
